# MIPT-programming-technologies-project

./: CMakeLists.txt  ClassDiagram.cd  README.md  main.cpp  main.py  run.sh
game/: CMakeLists.txt  game.h
map/: CMakeLists.txt  map.h
monster/: CMakeLists.txt  monster.h
monster_factory/: CMakeLists.txt  monster_factory.cpp  monster_factory.h
player/: CMakeLists.txt  player.h
